force-app/main/default/objects/FilmGenre__c/FilmGenre__c.object-meta.xml
<CustomObject>
    <label>Film Genre</label>
    <pluralLabel>Film Genres</pluralLabel>
    <nameField>
        <label>Film Genre Number</label>
        <type>AutoNumber</type>
        <displayFormat>FG-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>