force-app/main/default/objects/FilmGenre__c/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <label>Film</label>
    <type>MasterDetail</type>
    <referenceTo>Film__c</referenceTo>
    <relationshipLabel>Film Genres</relationshipLabel>
    <relationshipName>FilmGenres</relationshipName>
</CustomField>