force-app/main/default/objects/FilmGenre__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Lookup</type>
    <referenceTo>Genre__c</referenceTo>
    <relationshipLabel>Film Genres</relationshipLabel>
    <relationshipName>FilmGenres</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>